--- a/server/index.html
+++ b/server/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>AI Travel Pro</title>
+<title>Piyush AI Travel Planner</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
@@ -159,7 +159,10 @@ button{
   <img class="transport" src="https://img.icons8.com/ios-filled/100/ffffff/bus.png">
 </div>
 
-<h1>Welcome to Travel Planner by Piyush</h1>
+<h2 style="opacity:.7;font-weight:400">
+Built by Piyush • AI Travel Planner
+</h2>
+<h1>Let's plan</h1>
 
 <input id="origin" placeholder="From (e.g. Delhi)">
 <input id="destination" placeholder="To (e.g. Mumbai)">
