--- a/server/index.html
+++ b/server/index.html
@@ -164,7 +164,7 @@ async function searchTravel(){
   document.getElementById("hero").classList.add("shift-up");
 
   document.getElementById("results").innerHTML=
-    `<div class="loader">Thinking like AI...</div>`;
+    `<div class="loader">Options on the way....</div>`;
 
   try{
 
